--- a/src/components/ProductList.module.css
+++ b/src/components/ProductList.module.css
@@ -1,48 +1,65 @@
 
 .productsContainer{
     color: #5A5A5A;
-    background-color: #fffffe;
-    width: 100%;
-  
-}
-
-.cardContainer{
-  display: grid;
-  grid-template-columns:33% 33% 33%;
-  width:98%;
-  justify-items:center;
-  border-radius: 30px;
-  justify-content: center;
+    width: 90vw;
+    margin-left: 4em;
+    margin-right: 3em;
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    grid-column-gap: 3em;
+    grid-row-gap: 2em;
+    justify-content:space-evenly; 
 }
 
 .cardStyle{
-    display: grid;
-   grid-template-rows: 60% 20% 20%;
-   box-shadow: 2px 2px 5px 1px #52cdc4;
-    width: 30vw;
-    height: 30vh;
-    color: #2B2C34;
-    background-color: #fffffe;
-    border-radius: 10px;
-    justify-items:center;
+display: grid;
+grid-template-rows: 50% 15% 15%;
+width: 20vw;
+height:30vh;
+background: #fefefe;
+border-radius: 25px;
+border: solid .04em rgb(233, 228, 228);
+padding: 0 2em 1em ;
+color: #8b8a8a;
+box-shadow: 1px 2px #797878 ;
+box-shadow: 2px 2px 10px 1px #797878;
+justify-content: center;
+}
+.cardStyle:hover {
     
-    }
+    border: 3px solid #141414;
+    color: #0f0f0f;
+}
+
 .productsImg{
-    width: 40%;
-  
+    margin-top: 5px;
+    width: 35%;
+    margin-left: 80px;
 }
+
 .productsTitle{
-    font-size: 0.9em;
-    font-weight: bold;
-    text-align: left;
-  
+    display: flex;
+    justify-content: center;
+    font-size: 0.8em;
+    font-weight: bolder;
+    letter-spacing: 1px;
+    line-height: 35px;
+
 }
+
+.productsPrice{
+    display: flex;
+    justify-content: center;
+    font-size: 0.8em;
+    font-weight: bolder;
+    letter-spacing: 1px;
+    line-height: 35px;
+ 
+}
+
 .productDescription{
-    font-size: 12px;
+    font-size: 2em;
     font-weight: normal;
     margin-top: 20px;
     margin-right: 20px;
-}
-.productsPrice{
-    font-size: 12px;
 }
