--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,23 +1,14 @@
 .navContainer {
-    background-color: #fffffe;
-    display: grid;
-    grid-template-columns: 44% 10% 11% 12% 12%;
-    justify-items: flex-start;
-    margin-top: 7px;
-    height: 100vh;
+    display: flex;
+    margin-top: 10px;
+    height: 10vh;
+    font: caption;
+    background-color: #f5f5f5;
+    box-shadow: 2px 2px 10px 1px rgb(68, 68, 68);
   }
   
   .navLogo {
-    color: #2B2C34;
-    font-size: 24px;
-    font-weight: bolder;
-    margin-left: 100px;
-    margin-top: 7px;
+    margin-top: 13px;
+    margin-bottom: 10px;
   }
   
-  .navMenu {
-    color: #2B2C34;
-    font-size: 18px;
-    font-weight: bolder;
-    margin-top: 8px;
-  }
