--- a/src/components/ProductList.module.css
+++ b/src/components/ProductList.module.css
@@ -1,7 +1,22 @@
-
+.listContainer{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.inputContainer{
+    height: 5vh;
+    width: 20vw;
+    text-align: justify;
+    margin-top: 10px;
+    margin-left: 930px;
+    border-radius: 10px;
+    background-color: #fafafa;
+    box-shadow: 2px 2px 10px 1px #797878;    
+} 
 .productsContainer{
-    color: #5A5A5A;
     width: 90vw;
+    margin-top: 40px;
     margin-left: 4em;
     margin-right: 3em;
     display: grid;
@@ -13,15 +28,13 @@
 
 .cardStyle{
 display: grid;
-grid-template-rows: 50% 15% 15%;
+grid-template-rows: 30% 15% 15% 18% 15%;
 width: 20vw;
-height:30vh;
-background: #fefefe;
+height:35vh;
+background-color: #fefefe;
 border-radius: 25px;
 border: solid .04em rgb(233, 228, 228);
 padding: 0 2em 1em ;
-color: #8b8a8a;
-box-shadow: 1px 2px #797878 ;
 box-shadow: 2px 2px 10px 1px #797878;
 justify-content: center;
 }
@@ -33,17 +46,18 @@ justify-content: center;
 .productsImg{
     margin-top: 5px;
     width: 35%;
-    margin-left: 80px;
+    margin-left: 85px;
+    background-color: #fefefe;
 }
 
 .productsTitle{
     display: flex;
     justify-content: center;
-    font-size: 0.8em;
+    font-size: 0.9em;
     font-weight: bolder;
     letter-spacing: 1px;
-    line-height: 35px;
-
+    line-height: 25px;
+    background-color: #fefefe;
 }
 
 .productsPrice{
@@ -53,8 +67,36 @@ justify-content: center;
     font-weight: bolder;
     letter-spacing: 1px;
     line-height: 35px;
- 
+    background-color: #fefefe;
+    margin-top: -15px;
 }
+.btnDetail {
+    background-color: #f0ecec;
+    width: 12vw;
+     border: solid transparent;
+     margin-left: 50px;
+    border-radius: 12px;
+    border-width: 0 0 4px;
+    box-shadow: 2px 2px 5px 1px rgb(94, 92, 92);
+    box-sizing: border-box;
+    color: #5A5A5A;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 0.8em;
+    font-weight: bolder;
+    letter-spacing: 1px;
+    line-height: 25px;
+    outline: none;
+    overflow: visible;
+    padding: 10px 10px;
+    text-align: center;
+    touch-action: manipulation;
+    transform: translateZ(0);
+    transition: filter .2s;
+    user-select: none;
+    -webkit-user-select: none;
+    vertical-align: middle;
+  }
 
 .productDetail{
     font-size: 5em;
